# cattle

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  arithmetics.md  configure.ac  index.md
_layouts/: project.html  subpage.html
build-aux/: yuck-scmver.c
info/: Makefile.am  author.h2m  cattle.name
m4/: sxe-asm-corus.m4  sxe-compiler.m4  sxe-dfp754.m4
src/: Makefile.am  caev--bonu.c  caev--capd.c  caev--capg.c  caev--ctl1.c  caev--drip.c  caev--dvca.c  caev--dvse.c  caev--rhts.c  caev--splf.c  caev--splr.c  caev-fld-gp.erf  caev-rdr-gp.erf  caev-rdr.c  caev-rdr.h  caev-series.c  caev-series.h  caev-supp.c  caev-supp.h  caev-wrr.c  caev-wrr.h  caev.c  caev.h  caev=bonu.c  caev=ctl1.c  caev=drip.c  caev=dvca.c  caev=dvse.c  caev=rhts.c  caev=splf.c  caev=splr.c  catest.c  catest.yuck  cattle-date.h  cattle-perio.h  cattle-price.c  cattle-price.h  cattle-quant.c  cattle-quant.h  cattle-ratio.c  (+27 more)
src/coru/: cocore.c  cocore.h  switch.h
test/: CBK.echs  Makefile.am  SVT.echs  XMT.echs  arith.01.c  arith.02.c  arith.03.c  arith.04.c  caev-io.c  caev-supp.01.c  caev-supp.01.clit  caev-supp.02.c  caev-supp.02.clit  caev-supp.03.c  caev-supp.03.clit  caev-supp.04.c  caev-supp.04.clit  caev-supp.05.c  caev-supp.05.clit  caev-supp.06.c  caev-supp.06.clit  caev-supp.07.c  caev-supp.07.clit  caev-supp.08.c  caev-supp.08.clit  caev-supp.09.c  caev-supp.09.clit  caev-supp.10.c  caev-supp.10.clit  caev-supp.11.c  caev-supp.11.clit  caev-supp.12.c  caev-supp.12.clit  caev-supp.13.c  caev-supp.13.clit  caev-supp.14.c  caev-supp.14.clit  caev.01.c  caev.01.clit  caev.02.c  (+228 more)
